--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed:faqs": "node scripts/seedFAQs.js"
   },
   "dependencies": {
     "axios": "^1.5.1",
